# flame-jam

./: .gitignore  CMakeLists.txt
include/Enum/: GameStatus.hpp  Input.hpp
include/Game/: Game.hpp  Movements.hpp  Player.hpp
src/: main.cpp
src/Game/: Game.cpp  Input.cpp
src/Game/Game/: Game.cpp
src/Game/Menu/: Menu.cpp
src/Game/Movements/: Movements.cpp
